fixed nave layout on small screen

--- a/src/ServicePulse.Host/app/css/particular.css
+++ b/src/ServicePulse.Host/app/css/particular.css
@@ -19,17 +19,15 @@ pre {
     right: 0;
     left: 0;
     /* Set the fixed height of the footer here */
-    height: 130px;
+    height: 60px;
     width: 100%;
 	text-align: left;
-	font: bold 16px sans-serif;
+	font: bold 14px sans-serif;
 	padding: 5px 0;
 	margin-top: 10px;
-
     background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
-	
     z-index: 1;
 }
 
@@ -37,13 +35,13 @@ pre {
 .footer  i{
 	background-color:  #33383b;
 	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
+	font-size: 16px;
+	width: 26px;
+	height: 26px;
 	border-radius: 50%;
 	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
+	line-height: 28px;
+	margin: 8px;
 	vertical-align: middle;
 }
 
@@ -52,22 +50,7 @@ footer  i.warning{
 	
 }
 
-.footer  i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
-}
-.footer  i.fa-code-fork{
-	font-size: 17px;
-	line-height: 38px;
-}
-.footer  i.fa-book{
-	font-size: 17px;
-	line-height: 38px;
-}
-.footer  i.fa-external-link{
-	font-size: 17px;
-	line-height: 38px;
-}
+
 
 .footer  p{
 	display: inline-block;
